added styling edits and photos

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,6 +1,8 @@
-/* .App {
-  text-align: center;
-} */
+.App {
+  margin-top: 2%;
+  margin-left: 11%;
+  margin-right: 11%;
+}
 
 .App-logo {
   height: 40vmin;
