--- a/website/src/components/ProjectCard.css
+++ b/website/src/components/ProjectCard.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .projOutline {
   border: 2px solid black; 
   border-radius: 8px;
@@ -10,14 +12,17 @@
 
 .projHeader {
   font-family: 'Barlow', sans-serif;
-  color: #247BA0;
-  font-size: 20px;
+  color: transparent;
+  font-size: 24px;
+	-webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #247BA0;
 }
 
 .projDescript {
   font-family: 'Barlow', sans-serif;
   color: #247BA0;
-  font-size: 15px;
+  font-size: 16px;
+  font-weight: 500;
   flex-grow: 1; 
 }
 
@@ -26,12 +31,12 @@
   height: 170px;
   object-fit: cover;
   border-radius: 10px;
-  margin-bottom: 15px;
 }
 
 .projStack {
   font-family: 'Barlow', sans-serif;
   font-size: 15px;
+  font-weight: 500;
   display: flex; 
   flex-wrap: wrap; 
   gap: 10px; 
@@ -46,6 +51,7 @@
 .projButton button {
   font-family: 'Barlow', sans-serif;
   font-size: 15px;
+  font-weight: 500;
   padding: 5px 10px;
   border: none;
   border-radius: 5px;
