--- a/website/src/components/ProjectCard.css
+++ b/website/src/components/ProjectCard.css
@@ -64,11 +64,20 @@
   width: 80px;
 }
 
-.projButton button:last-child {
+.learnMoreButton {
+  font-family: 'Barlow', sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+  padding: 5px 10px;
+  border: 2px solid #247BA0;
+  border-radius: 5px;
+  cursor: pointer;
   background-color: transparent;
   color: #247BA0;
   flex-grow: 1;
-  border: 2px solid #247BA0;
+  text-align: center;
+  text-decoration: none; /* Removes underline */
+  display: inline-block;
 }
 
 .projOutline span {
